--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Reaction Tester</title>
+	<meta charset="utf-8" />
+    	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 	<link href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="rt.css">
 </head>
